--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
+/* font-family: 'Montserrat', sans-serif;
+font-family: 'Poppins', sans-serif; */
+
+:root {
+  --size: calc(1vh + 1vw);
+  --c-red: hsl(0, 67%, 44%);
+  --c-gold: hsl(37, 100%, 61%);
+  --c-primary: hsl(264, 94%, 60%);
+  --c-accent: hsl(198, 87%, 58%);
+  --c-light: hsl(180, 13%, 95%);
+  --c-text: hsl(254, 7%, 35%);
+  --c-label: hsl(249, 6%, 58%);
+  --c-disabled: hsl(252, 19%, 89%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
 }
