--- a/src/index.css
+++ b/src/index.css
@@ -6,19 +6,62 @@ font-family: 'Poppins', sans-serif; */
   --size: calc(1vh + 1vw);
   --c-red: hsl(0, 67%, 44%);
   --c-gold: hsl(37, 100%, 61%);
+  --c-yellow: hsl(35, 85%, 71%);
+  --c-orange: hsl(27, 74%, 41%);
+  --c-pink: hsl(305, 59%, 65%);
   --c-primary: hsl(264, 94%, 60%);
   --c-accent: hsl(198, 87%, 58%);
+  --c-green-sm: hsl(144, 46%, 61%);
   --c-light: hsl(180, 13%, 95%);
+  --c-white: hsl(219, 20%, 84%);
+  --c-dark-sm: hsl(240, 1%, 23%);
   --c-text: hsl(254, 7%, 35%);
   --c-label: hsl(249, 6%, 58%);
   --c-disabled: hsl(252, 19%, 89%);
+
+  --c-main-bg: hsl(202, 32%, 15%);
+  --c-sidebar-bg: hsl(240, 1%, 15%);
+  --c-header-bg: hsl(240, 5%, 23%);
+
+  --c-black-sm: rgba(0, 0, 0, .6);
+
+  --box-shadow-sm: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 *, *::before, *::after {
   box-sizing: border-box;
 }
 
+html,
+body {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
+}
+
+/* ------------ScrollBar---------------------> */
+::-webkit-scrollbar {
+  width: 8px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+  background: #2B4865;
+
+}
+::-webkit-scrollbar-thumb {
+  /* background-image: linear-gradient(to top, #c79081 0%, #dfa579 100%); */
+  background-image: linear-gradient(to right, #434343 0%, black 100%);
+  box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
+  border-radius: 100px;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  /* background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%); */
+  background: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), linear-gradient(to top, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.25) 200%);
+  background-blend-mode: multiply;
 }
