Added new components

--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -1,98 +1,13 @@
 
-/* ---Sidebar-Toggle-Style--- */
-.hamburger {
-  position: fixed;
-  top: 1.5rem;
-  right:.5rem;
-  padding: 10px 10px;
-  display: inline-block;
-  cursor: pointer;
-  transition-property: opacity, filter;
-  transition-duration: 0.15s;
-  transition-timing-function: linear;
-  font: inherit;
-  color: inherit;
-  text-transform: none;
-  background-color: var(--c-black-sm);
-  border: 0;
-  border-radius: .5em;
-  margin: 0;
-  overflow: visible;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-  z-index: 300; 
-}
-.hamburger:hover {
-  opacity: 0.7; 
-}
-.hamburger.is-active:hover {
-  opacity: 0.7; 
-}
-.hamburger.is-active .hamburger-inner,
-.hamburger.is-active .hamburger-inner::before,
-.hamburger.is-active .hamburger-inner::after {
-  background-color: var(--c-orange); 
-}
 
-.hamburger-box {
-  width: 40px;
-  height: 24px;
-  display: inline-block;
-  position: relative; 
-}
-
-.hamburger-inner {
-  display: block;
-  top: 50%;
-  margin-top: 0px; 
-}
-.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
-  width: 40px;
-  height: 4px;
-  background-color: var(--c-orange);
-  border-radius: 4px;
-  position: absolute;
-  transition-property: transform;
-  transition-duration: 0.15s;
-  transition-timing-function: ease;
-}
-.hamburger-inner::before, .hamburger-inner::after {
-  content: "";
-  display: block; 
-}
-.hamburger-inner::before {
-  top: -10px; 
-}
-.hamburger-inner::after {
-  bottom: -10px; 
-}
-
-.hamburger--arrowalt .hamburger-inner::before {
-  transition: top 0.1s 0.1s ease, transform 0.1s cubic-bezier(0.165, 0.84, 0.44, 1); 
-}
-
-.hamburger--arrowalt .hamburger-inner::after {
-  transition: bottom 0.1s 0.1s ease, transform 0.1s cubic-bezier(0.165, 0.84, 0.44, 1); 
-}
-
-.hamburger--arrowalt.is-active .hamburger-inner::before {
-  top: 0;
-  transform: translate3d(-8px, -10px, 0) rotate(-45deg) scale(0.7, 1);
-  transition: top 0.1s ease, transform 0.1s 0.1s cubic-bezier(0.895, 0.03, 0.685, 0.22); 
-}
-
-.hamburger--arrowalt.is-active .hamburger-inner::after {
-  bottom: 0;
-  transform: translate3d(-8px, 10px, 0) rotate(45deg) scale(0.7, 1);
-  transition: bottom 0.1s ease, transform 0.1s 0.1s cubic-bezier(0.895, 0.03, 0.685, 0.22); 
-}
-/* -------------------------- */
-
+/* ------------Main-Page-Style-------------- */
 .main_page {
   position: relative;
   width: 100%;
   height: 100%;
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background: var(--c-main-bg);
@@ -155,6 +70,7 @@
   translate: -17.5rem 0;
   padding: 1rem;
   background: var(--c-sidebar-bg);
+  color: var(--c-moon);
   z-index: 200;
   transition: all .4s ease-in-out;
 }
@@ -162,22 +78,45 @@
   translate: 0;
 }
 
+.sidebar_logo {
+  color: var(--c-accent);
+  animation: sidebar_logo_spin infinite 20s linear;
+}
+@keyframes sidebar_logo_spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .title_1 {
   width: 100%;
   border: none;
   border-radius: 0;
-  color: var(--c-white);
+  font-family: 'Montserrat', sans-serif;
+  font-size: clamp(.75rem, calc(var(--size) * 1.2), 1.2rem);
+  font-weight: 600;
+  color: var(--c-label);
+  transition: all .2s ease-in-out;
 }
 .title_1:hover {
-  color: var(--c-pink);
+  color: var(--c-white);
   background: var(--c-header-bg);
 }
 
 .title_2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: clamp(.75rem, calc(var(--size) * 1.2), 1.1rem);
+  font-weight: 500;
   color: var(--c-label);
+  padding: .5rem .75rem;
+  margin-bottom: .75rem;
+  transition: all .2s ease-in-out;
 }
 .title_2:hover {
-  color: var(--c-white);
+  color: var(--c-accent);
 }
 .bi-asterisk {
   opacity: 0;
@@ -185,21 +124,46 @@
   transition: opacity .2s ease-in-out;
 }
 .title_2:hover .bi-asterisk {
+  color: var(--c-red);
   opacity: 1;
 }
 
 .title_3 {
+  font-family: 'Poppins', sans-serif;
+  font-size: clamp(.75rem, calc(var(--size) * 1), 1rem);
+  font-weight: 400;
+  color: var(--c-green-sm);
+  padding: .5rem .75rem;
+  margin-bottom: .5rem;
+  transition: all .2s ease-in-out;
+}
+.title_3:hover {
   color: var(--c-yellow);
+}
+
+/* ----Content-Style---- */
+.lesson_block {
+  width: 100%;
+  height: auto;
+}
+
+.video_wrapper {
+  width: 100%;
+  height: 60vh;
+  border: 2px solid var(--c-text);
+}
+
+.exclamation_circle_ico {
+  color: var(--c-red);
+}
+.check_circle_ico {
+  color: var(--c-green-sm);
 }
 
 
 /* -------------------- */
 
 @media (min-width: 1920px) {
-  .hamburger {
-    display: none;
-  }
-
   .my_sidebar,
   .sidebar_header {
     translate: 0;
@@ -207,10 +171,6 @@
 }
 
 @media (max-width: 1200px) {
-  .hamburger {
-    display: block;
-  }
-
   .my_sidebar,
   .sidebar_header {
     translate: -17.5rem 0;
